testsuite/tests/deriving/should_fail/T10598_fail3.stderr

T10598_fail3.hs:8:36: error:
    • Generic instances can only be derived in Safe Haskell using the stock strategy.
    • In the instance declaration for ‘Generic T’
